fix: align submit button.

--- a/src/style.css
+++ b/src/style.css
@@ -39,8 +39,10 @@
 }
 
 .submit-button {
-    margin-top: 20px;
-    background-color: #4CAF50;
+    display: flex;
+    align-self: center;
+    margin-top: 30px;
+    background-color: #104c5e;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -49,5 +51,5 @@
 }
 
 .submit-button:hover {
-    background-color: #45a049;
+    background-color: #104c5e;
 }
